--- a/app/src/main/res/values/appicon_background.xml
+++ b/app/src/main/res/values/appicon_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="freecoin_background">#CBA422</color>
+    <color name="appicon_background">#000000</color>
 </resources>
