--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#22EE33</color>
     <color name="colorPrimaryDark">#009905</color>
     <color name="colorAccent">#FF00FF</color>
+    <color name="colorError">#DD4444</color>
 </resources>
