--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,6 +40,8 @@
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/desk_button"
                 android:onClick="login"
                 android:text="@string/login_prompt"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -49,6 +51,8 @@
                 android:id="@+id/play_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/desk_button"
                 android:onClick="play"
                 android:text="@string/play"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -58,6 +62,8 @@
                 android:id="@+id/leaderboard_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/desk_button"
                 android:onClick="leaderboard"
                 android:text="@string/leaderboard"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
