--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress1"
                     android:text="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -109,7 +109,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress2"
                     android:text="2"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -122,7 +122,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress3"
                     android:text="3"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -144,7 +144,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress4"
                     android:text="4"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -157,7 +157,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress5"
                     android:text="5"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -170,7 +170,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress6"
                     android:text="6"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -191,7 +191,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress7"
                     android:text="7"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -204,7 +204,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress8"
                     android:text="8"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -217,7 +217,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress9"
                     android:text="9"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -238,7 +238,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPressMinus"
                     android:text="-"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -251,7 +251,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPress0"
                     android:text="0"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -264,7 +264,7 @@
                     android:layout_height="fill_parent"
                     android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:background="@drawable/keypad_button"
+                    android:background="@drawable/desk_button"
                     android:onClick="buttonPressBack"
                     android:text="⌫"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
