--- a/app/src/main/res/drawable/desk_button.xml
+++ b/app/src/main/res/drawable/desk_button.xml
@@ -2,6 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape>
+            <stroke
+                android:width="1dp"
+                android:color="#000000"/>
             <corners android:radius="7dp"/>
             <padding
                 android:left="10dp"
